--- a/packages/batch-execute/package.json
+++ b/packages/batch-execute/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@graphql-tools/delegate",
+  "name": "@graphql-tools/batch-execute",
   "version": "6.2.4",
   "description": "A set of utils for faster development of GraphQL tools",
   "repository": "git@github.com:ardatan/graphql-tools.git",
@@ -18,10 +18,7 @@
     "input": "./src/index.ts"
   },
   "dependencies": {
-    "@graphql-tools/batch-execute": "^6.2.4",
-    "@graphql-tools/schema": "^6.2.4",
     "@graphql-tools/utils": "^6.2.4",
-    "@ardatan/aggregate-error": "0.0.6",
     "dataloader": "2.0.0",
     "is-promise": "4.0.0",
     "tslib": "~2.0.1"
